another wierd update

--- a/tests/junk.ipynb
+++ b/tests/junk.ipynb
@@ -87,23 +87,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'OCC'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/cear/Desktop/Link to repos/particleFilter/tests/junk.ipynb Cell 6'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/cear/Desktop/Link%20to%20repos/particleFilter/tests/junk.ipynb#ch0000005?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mOCC\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'OCC'"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 6.123234e-17, -1.000000e+00,  0.000000e+00,  5.000000e+00],\n",
+       "       [ 1.000000e+00,  6.123234e-17,  0.000000e+00,  2.000000e+00],\n",
+       "       [ 0.000000e+00,  0.000000e+00,  1.000000e+00,  0.000000e+00],\n",
+       "       [ 0.000000e+00,  0.000000e+00,  0.000000e+00,  1.000000e+00]])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import OCC"
+    "from particleFilter.geometry import pose2\n",
+    "import numpy as np\n",
+    "x = pose2(5,2,np.pi/2)\n",
+    "x.T3d()"
    ]
   }
  ],
@@ -126,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
